Tue Apr  8 10:31:30 1997  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* sendauth.c (krb5_sendauth): Don't free credspout if it is to be
		returned in out_creds (#PR 357)

Thu Nov 21 13:54:01 1996  Ezra Peisach  <epeisach@mit.edu>

	* recvauth.c (krb5_recvauth): If there is an error, and the server
		argument to krb5_recvauth is NULL, create a dummy server
		entry for the krb5_error structure so that krb5_mk_error
		will not die with missing required fields. [krb5-libs/209]

Wed Nov 13 14:30:47 1996  Tom Yu  <tlyu@mit.edu>

	* init_ctx.c: Revert previous kt_default_name changes.

Tue Nov 12 22:07:33 1996  Tom Yu  <tlyu@mit.edu>

	* init_ctx.c (krb5_init_context): Oops. Initialize kt_default_name
 	to NULL.
	
	* init_ctx.c (krb5_free_context): Free kt_default_name if it's
	non-NULL.

Sat Nov  9 14:19:28 1996  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (check-unix): Invoking t_ser requires that
		KRB5_CONFIG points to a valid krb5.conf 

	* t_ser.c (main): If verbose flag is set and there is an error,
	 	display error message.

Wed Nov  6 14:02:21 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* init_ctx.c (krb5_init_context): Initialize the error tables, so
		applications don't need to call krb5_init_ets().

Tue Nov  5 08:09:23 1996  Ezra Peisach  <epeisach@mit.edu>

	* serialize.c (krb5_register_serializer): Do not free a NULL pointer. 

Thu Oct 31 13:48:14 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* init_ctx.c (krb5_init_context): Make it more obvious that
		default ticket lifetimes is not yet supported.

Tue Sep 24 20:59:14 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* get_in_tkt.c (make_preauth_list): Correctly null-terminate the
		preauth list generated by make_preauth_list.

Thu Sep 19 12:29:59 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* unparse.c (krb5_unparse_name_ext): Make unparse correctly handle
		a all cases where a principal contains a nulls, backspace,
		newlines, or tabs.

	* t_kerb.c (test_parse_principal): Add test for checking
	 	krb5_parse_principal()