@@ -1,3 +1,10 @@
+Wed Feb 12 20:47:30 1997  Tom Yu  <tlyu@mit.edu>
+
+	* fwd_tgt.c (krb5_fwd_tgt_creds): Use the client's realm rather
+	than the server's realm for constructing the tgs principal.
+	Remove TC_MATCH_SRV_NAMEONLY from call to retrieve_cred() because
+	we want to get an exact match.
+
 Tue Apr  8 10:31:30 1997  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
 	* sendauth.c (krb5_sendauth): Don't free credspout if it is to be
